Loader changed again and bg load

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.3.21",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
