--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "aos": "^3.0.0-beta.6",
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.3.21",
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^4.1.4",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
